fabric/cluster/lab/foundation/endpoint-publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-apiserver-endpoint-publisher
  namespace: lab
  labels:
    app.kubernetes.io/component: endpoint-publisher
    app.kubernetes.io/instance: lab
    app.kubernetes.io/name: lab-apiserver-endpoint-publisher
    app.kubernetes.io/part-of: lab-control-plane
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lab-apiserver-endpoint-publisher
  template:
    metadata:
      labels:
        app.kubernetes.io/component: endpoint-publisher
        app.kubernetes.io/instance: lab
        app.kubernetes.io/name: lab-apiserver-endpoint-publisher
        app.kubernetes.io/part-of: lab-control-plane
    spec:
      automountServiceAccountToken: true
      enableServiceLinks: false
      serviceAccountName: lab-apiserver-endpoint-publisher
      terminationGracePeriodSeconds: 30
      nodeSelector:
        fabric.samcday.com/platform: "true"
        kubernetes.io/os: linux
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchFields:
                  - key: metadata.name
                    operator: In
                    values:
                      - fabric-az1-svc1
                      - fabric-az1-svc2
      tolerations:
        - effect: NoSchedule
          key: fabric.samcday.com/platform
          operator: Equal
          value: "true"
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: publisher
          image: docker.io/bitnami/kubectl:latest@sha256:95de17e6eb92da83a58c90a9df0c4cede634f898d2e6b92ea04f4a6ee6ace08d
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -ec
          args:
            - |
              [...]
          readinessProbe:
            exec:
              command: [/bin/sh, -ec, test -s /tmp/published]
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 16Mi
          name: tmp
